Add NetWork Layer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,14 @@
 
     <string name="first_activity">Movie Shelf</string>
 
-    <string name="movie_first_details">blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah </string>
-    <string name="movie_reviews">blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah </string>
+    <string name="movie_first_details">Here is detail Here is detail Here is detail Here is detailThere is a good enough to all u should try itThere is a good enough to all u should try itThere is a good enough to all u should try itThere is a good enough to all u should try itThere is
+        a good enough to all u should try itThere is a good enough to all u should try itThere is a good enough to all u should
+        try it  There is a good enough to all u should try itThere is a good enough to all u should try itThere is a good enough to all u should try it
+
+        Here is detail Here is detail Here is detail Here is detailThere is a good enough to all u should try itThere is a good enough to all u should try itThere is a good enough to all u should try itThere is a good enough to all u should try itThere is
+        a good enough to all u should try itThere is a good enough to all u should try itThere is a good enough to all u should
+        try it  There is a good enough to all u should try itThere is a good enough to all u should try it
+    </string>
+    <string name="movie_reviews">There is a good enough to all u should try it good luck There is a good enough to all u should try it good luck There is a good enough to all u should try it good luck There is a good enough to all u should try it good luck   </string>
     <string name="review_title"><u>Reviews</u></string>
 </resources>
